# image-taxonomy-labeler

./: .gitignore  404.html  CONTRIBUTING.md  README.md  eslint.config.js  graphics-replicability.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-compare.sh  start-label.sh
.github/workflows/: ci.yml  gh-pages.yml
apps/compare/: .env.example  README.md  auto-imports.d.ts  components.d.ts  netlify.toml  package.json  start.sh  tsconfig.json  vite.config.ts
apps/compare/src/: main.ts
apps/compare/test/: utils-url.test.ts
apps/label/: .env.example  README.md  auto-imports.d.ts  components.d.ts  netlify.toml  package.json  start.sh  tsconfig.json  uno.config.ts  vite.config.ts
apps/label/src/: App.vue
apps/label/test/: unique-name.test.ts
assets/: _...all_-B-u7Jpbc.js  _...all_-B6D_8Rsq.js  _...all_-BSLwjG5x.js  _...all_-C60r_UCF.js  _...all_-CFSt8Hm8.js  _...all_-DKH__t95.js  _...all_-Dl984QmP.js  _...all_-DmdHkOmI.js  _...all_-DvEzPII-.js  _...all_-FB7Vz3Wr.js  _...all_-iOHTUKCq.js  _...all_-knzLFAhc.js  index-AjwcJ8yO.css  index-BD-345XD.css  index-BZtvrzQT.css  index-Ba-uJZV6.js  index-BcCQ6OdS.js  index-Bqv8hF4_.js  index-Bxz0ZEy7.css  index-CFd0kPik.js  index-CHzeD0ns.css  index-CkGAJByI.js  index-D3jZdHVS.js  index-DAGTeLxJ.js  index-DXKX3fqu.css  index-Dpjlg3St.js  index-Dv4a80-p.js  index-MMSXWc5-.js  index-dUUmIsJc.css  index-tKytB1th.js
client-compare/: README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  start.sh  tsconfig.json  vite.config.ts
client-compare/src/assets/: README.md
client-compare/src/components/: TheDataDisplayHeader.vue  TheViewLabelProgress.vue  TheViewLabelProgressButtons.vue  TheViewTaxonomies.vue  TheViewTaxonomiesIndentedTree.vue  TheWidgetSearch.vue  VMessages.vue
client-compare/src/plugins/: file.ts  showProgressBar.ts  visualization.ts
client-compare/src/services/: image.ts  layout.ts
client-compare/src/stores/: message.ts  profile.ts  selector.ts  visualization.ts  workspace.ts
client-compare/test/: params.test.ts
client-label/: README.md  auto-imports.d.ts  components.d.ts  netlify.toml  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
client-label/src/assets/: README.md  download.py
client-label/src/components/: TheNavBar.vue  TheToggleLayout.vue  TheWidgetClassification.vue  TheWidgetTaxonomization.vue
client-label/src/plugins/: preload.ts  random.ts
client-label/src/services/: captioning.ts  clustering.ts  layout.ts  params.ts
client-label/src/stores/: selector.ts  (+2 more)
scripts/: .gitignore  README.md  cache_captions.py  cache_embeddings.py  cache_thumbnails.py  pyproject.toml  setup_cache.py
server/: .flake8  README.md  pyproject.toml  server.py  start.sh
server/static/: .gitignore  captions.jsonl  setup_samples.py
server/tests/: conftest.py  test_api_errors.py  test_assign_grid.py  test_image_index.py  test_setup_samples_extract.py
server/utils/: assign_grid.py  captioning.py  clustering.py  loaders.py
(+102 files in other folders)
