[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Yu Zhang <yuzhang94@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
libquery = "^0.1.1"
scikit-learn = "^1.3.1"
torch = "^2.5.1"
transformers = "^4.47.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
