[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Yu Zhang",email = "yuzhang94@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "libquery (>=0.1.1,<0.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

